# seed_pipeline_project

./: .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml
%USERPROFILE%/.venv_seed_pipeline/: pyvenv.cfg
%USERPROFILE%/.venv_seed_pipeline/Scripts/: activate  activate.bat
src/seed_pipeline/: __init__.py
src/seed_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/seed_pipeline/adapters/: __init__.py  generic_responses_v1.py  registry.py
src/seed_pipeline/api/: __init__.py  deps.py  main.py
src/seed_pipeline/api/routers/: seeds.py
src/seed_pipeline/db/: __init__.py  engine.py  models.py
src/seed_pipeline/ingest/: __init__.py  batch.py  cli.py  file_io.py  metrics.py  validate.py
src/seed_pipeline/normalize/: __init__.py  text.py
tests/: test_normalize.py
